feat: add render README.md using python script.
- Add python script and pip requirements to render README.md from data.yaml file.
- Update Taskfile.yaml to add render and lint tasks.
- Add lint workflow as GH action to lint project.
- Add User column to README.md.

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -11,10 +11,23 @@ tasks:
     desc: Lint using awesome-lint
     cmds:
       - "npx awesome-lint"
+  deps:
+    desc: Install dependencies
+    cmds:
+      - pip install -r ./scripts/requirements.txt
   lint:
     desc: Lint the repo
     cmds:
       - task: awesome-lint
+      - task: yamllint
+  render:
+    desc: Render README.md
+    cmds:
+      - "python scripts/render_readme.py > README.md"
+  yamllint:
+    desc: Lint using yamllint
+    cmds:
+      - yamllint .
   default:
     cmds:
       - task -l
