Remove CapnDans cooklang link to fix linting issues
Signed-off-by: nιcнolaѕ wιlde <ncwilde43@gmail.com>

--- a/data.yaml
+++ b/data.yaml
@@ -49,8 +49,8 @@ userCookbooks:
       name: "Dan's Online Recipe Book"
       url: "https://bonmot.ca/~daniel/Recipes/"
     cooklang:
-      name: "Dan's Online Recipe Book"
-      url: "https://bonmot.ca/~daniel/Recipes/"
+      name: "-"
+      url: ""
     user:
       name: "CapnDan"
       url: "https://bonmot.ca/~daniel/"
