Add markdown link check.
Add linkcheck.sh that checks the links of all markdown files.
Add linkcheck task to Taskfile.yaml
Add link-check GitHub Action to add link checks on a daily schedule.
Add mlc config file to set access codes to pass.

Signed-off-by: nιcнolaѕ wιlde <ncwilde43@gmail.com>

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -20,6 +20,10 @@ tasks:
     cmds:
       - task: awesome-lint
       - task: yamllint
+  linkcheck:
+    desc: Check for dead links
+    cmds:
+      - ./scripts/linkcheck.sh
   render:
     desc: Render README.md
     cmds:
